[tool.poetry]
name = "nostr-keygen"
version = "0.1.0"
description = ""
authors = ["blackcoffeexbt <87530449+blackcoffeexbt@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
nostr = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
